# uplid

./: .gitignore  LICENSE  README.md  llm.txt  lpid.py  prefixed_id.py  pyproject.toml  tests.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-01-30-uplid-v1-redesign.md  2026-01-30-v1-implementation.md
lpid/: __init__.py  lpid.py
scripts/: lint.sh  test.sh
src/uplid/: __init__.py  sqlalchemy.py  uplid.py
tests/: conftest.py  test_base62.py  test_concurrency.py  test_fastapi.py  test_fuzz.py  test_pydantic.py  test_sqlalchemy.py  test_sqlmodel.py  test_types.py  test_uplid_comparison.py  test_uplid_core.py
uplid/: __init__.py  uplid.py
