[project]
name = "uplid"
version = "1.0.1"
description = "Universal Prefixed Literal IDs - type-safe, human-readable identifiers"
authors = [{ name = "ZVS", email = "zvs@daswolf.dev" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
keywords = ["uuid", "id", "identifier", "pydantic", "type-safe", "uuid7"]
dependencies = ["pydantic>=2.10"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/zvsdev/uplid"
Repository = "https://github.com/zvsdev/uplid"

[build-system]
requires = ["uv_build>=0.9.28,<0.10"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-cov>=6.1.1,<8",
    "hypothesis>=6.151.4,<7",
    "ty>=0.0.14,<0.1",
    "ruff>=0.14.14,<0.15",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "sqlalchemy>=2.0,<3",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "S", "A", "T20", "RET", "SLF", "SLOT", "TRY", "FBT",
    "ANN", "TCH", "C4", "SIM", "ARG", "ERA", "PIE", "PERF", "FURB", "UP", "N", "Q", "RUF", "D",
]
ignore = ["D100", "D104", "D107", "TRY003"]

[tool.ruff.lint.isort]
known-first-party = ["uplid"]
known-third-party = ["pydantic", "pydantic_core"]
required-imports = ["from __future__ import annotations"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S301", "ANN", "D", "ARG001", "SLF001", "N806"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ty.environment]
python-version = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=uplid", "--cov-report=term-missing", "--cov-fail-under=95"]

[tool.coverage.run]
branch = true
source = ["src/uplid"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
